--- a/index.html
+++ b/index.html
@@ -3,29 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="js.css">
-    <title>Document</title>
+    <title>Botão de Parabéns</title>
+    <style>
+        /* Estilos para o botão */
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f4f4f4;
+        }
+
+        #botaoClique {
+            padding: 15px 30px;
+            font-size: 16px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        #botaoClique:hover {
+            background-color: #45a049;
+        }
+
+        /* Estilos para a mensagem */
+        #mensagemParabens {
+            margin-top: 20px;
+            font-size: 18px;
+            color: #333;
+            display: none;
+        }
+    </style>
 </head>
 <body>
-   <nav class="navBar"> <img src="Sabesp.webp" alt=""></nav>
- <main>
+    <div>
+        <button id="botaoClique">Clique aqui</button>
+        <p id="mensagemParabens"> Feliz aniversário Maiara!</p>
+    </div>
 
-       <section class="content">
-            <h1>Calculo Sabesp</h1>
-            <label for="" >Insira a Leitura atual</label>
-            <input type="number" name="" id="" class="leAt">
-            <label for="">Insira a Leitura TACE</label>
-            <input type="number" name="" id="" class="leTace">
-            <label for="">Insira o dia do mês que foi retirada a leitura</label>
-            <input type="number" name="" id="" class="diaTace">
-            <label for="number">Insira o dia do mês de hoje</label>
-            <input type="number" name="" id="" class="diaAtual">
-            <button class="butEnv btn btn-light my-2 my-sm-0">Enviar</button>
-        </section>
-
- </main>
-    <h1 class="resposta"></h1>
+    <script>
+        // Função que exibe a mensagem de parabéns
+        document.getElementById("botaoClique").addEventListener("click", function() {
+            document.getElementById("mensagemParabens").style.display = "block";
+        });
+    </script>
 </body>
-<script src="CALCULOSABESP.JS"></script>
 </html>
