Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Botão de Parabéns</title>
+    <title>Jordan te amo</title>
     <style>
         /* Estilos para o botão */
         body {
@@ -43,7 +43,21 @@
 <body>
     <div>
         <button id="botaoClique">Clique aqui</button>
-        <p id="mensagemParabens"> Feliz aniversário Maiara!</p>
+        <p id="mensagemParabens">
+
+"Para Jordan, amor da minha vida,
+
+Dizer 'eu te amo' parece tão simples comparado ao turbilhão de emoções que sinto por você. Mas quero que você saiba que essas três palavras carregam tudo o que há de mais sincero dentro de mim. Desde o momento em que você entrou na minha vida, tudo mudou para melhor. É como se você tivesse trazido cor para um mundo que antes era em preto e branco.
+
+Cada dia ao seu lado é um presente, e cada momento que passamos juntos se torna uma lembrança preciosa que guardo com carinho no meu coração. Amo a maneira como você sorri, como seu olhar encontra o meu e como, mesmo nos dias mais difíceis, você consegue encontrar um jeito de me fazer sorrir também. Você é a luz que ilumina o meu caminho, a paz em meio ao caos e a razão pela qual acredito que a felicidade existe de verdade.
+
+Eu admiro a sua força, a sua bondade e a sua capacidade de amar tão intensamente. Você me inspira a ser uma pessoa melhor, a crescer, a aprender e a buscar sempre o melhor de mim. Estar ao seu lado é mais do que um desejo, é uma necessidade. Você é o meu porto seguro, a minha casa e a minha melhor amiga, tudo em uma só pessoa.
+
+Prometo que estarei ao seu lado em todos os momentos, nos bons e nos ruins, apoiando você em cada passo dessa jornada que estamos trilhando juntos. Prometo que farei o meu melhor para te fazer feliz, para te proteger e para construir uma vida juntos que seja cheia de amor, respeito e compreensão.
+
+Meu amor por você é imenso, maior do que eu poderia imaginar, e cresce a cada dia. Não há nada que eu não faria para ver você feliz, porque a sua felicidade é a minha também. Obrigado por ser quem você é e por me permitir fazer parte da sua vida. Eu te amo mais do que palavras podem expressar, e vou passar o resto da minha vida provando isso a você.
+
+Com todo o amor,sempre!</p>
     </div>
 
     <script>
