--- a/index.html
+++ b/index.html
@@ -3,68 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jordan te amo</title>
-    <style>
-        /* Estilos para o botão */
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
-        }
-
-        #botaoClique {
-            padding: 15px 30px;
-            font-size: 16px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        #botaoClique:hover {
-            background-color: #45a049;
-        }
-
-        /* Estilos para a mensagem */
-        #mensagemParabens {
-            margin-top: 20px;
-            font-size: 18px;
-            color: #333;
-            display: none;
-        }
-    </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="js.css">
+    <title>Document</title>
 </head>
 <body>
-    <div>
-        <button id="botaoClique">Clique aqui</button>
-        <p id="mensagemParabens">
+   <nav class="navBar"> <img src="Sabesp.webp" alt=""></nav>
+ <main>
+<br>
+       <section class="content">
+            <h1>Calculo Sabesp</h1>
+            <label for="" >Insira a Leitura atual</label>
+            <input type="number" name="" id="" class="leAt">
+            <label for="">Insira a Leitura TACE</label>
+            <input type="number" name="" id="" class="leTace">
+            <label for="">Insira o dia do mês que foi retirada a leitura</label>
+            <input type="number" name="" id="" class="diaTace">
+            <label for="number">Insira o dia do mês de hoje</label>
+            <input type="number" name="" id="" class="diaAtual">
+            <button class="butEnv btn btn-light my-2 my-sm-0">Enviar</button>
+        </section>
 
-"Para Jordan, amor da minha vida,
-
-Dizer 'eu te amo' parece tão simples comparado ao turbilhão de emoções que sinto por você. Mas quero que você saiba que essas três palavras carregam tudo o que há de mais sincero dentro de mim. Desde o momento em que você entrou na minha vida, tudo mudou para melhor. É como se você tivesse trazido cor para um mundo que antes era em preto e branco.
-
-Cada dia ao seu lado é um presente, e cada momento que passamos juntos se torna uma lembrança preciosa que guardo com carinho no meu coração. Amo a maneira como você sorri, como seu olhar encontra o meu e como, mesmo nos dias mais difíceis, você consegue encontrar um jeito de me fazer sorrir também. Você é a luz que ilumina o meu caminho, a paz em meio ao caos e a razão pela qual acredito que a felicidade existe de verdade.
-
-Eu admiro a sua força, a sua bondade e a sua capacidade de amar tão intensamente. Você me inspira a ser uma pessoa melhor, a crescer, a aprender e a buscar sempre o melhor de mim. Estar ao seu lado é mais do que um desejo, é uma necessidade. Você é o meu porto seguro, a minha casa e a minha melhor amiga, tudo em uma só pessoa.
-
-Prometo que estarei ao seu lado em todos os momentos, nos bons e nos ruins, apoiando você em cada passo dessa jornada que estamos trilhando juntos. Prometo que farei o meu melhor para te fazer feliz, para te proteger e para construir uma vida juntos que seja cheia de amor, respeito e compreensão.
-
-Meu amor por você é imenso, maior do que eu poderia imaginar, e cresce a cada dia. Não há nada que eu não faria para ver você feliz, porque a sua felicidade é a minha também. Obrigado por ser quem você é e por me permitir fazer parte da sua vida. Eu te amo mais do que palavras podem expressar, e vou passar o resto da minha vida provando isso a você.
-
-Com todo o amor,sempre!</p>
-    </div>
-
-    <script>
-        // Função que exibe a mensagem de parabéns
-        document.getElementById("botaoClique").addEventListener("click", function() {
-            document.getElementById("mensagemParabens").style.display = "block";
-        });
-    </script>
+ </main>
+    <h1 class="resposta"></h1>
 </body>
+<script src="CALCULOSABESP.JS"></script>
 </html>
